SERVER-78511 Disallow $_internalBucketGeoWithin in $elemMatch

This internal geo operator assumes it runs against a whole input
document, so the MatchExpression parser should enforce that.
Other operators such as $where and $expr already have this restriction;
this commit uses the same mechanism for $_internalBucketGeoWithin.